--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     // Ladda alla gästboksinlägg
     async function loadGuestbook() {
       const { data, error } = await supabase2
-        .from('guestbook')
+        .from('gästbok')
         .select('*')
         .order('created_at', { ascending: false });
 
@@ -199,7 +199,7 @@
       if (!message) return alert("Du måste skriva ett inlägg.");
 
       const { error } = await supabase2
-        .from('guestbook')
+        .from('gästbok')
         .insert([{ name, message }]);
 
       if (error) {
@@ -221,4 +221,5 @@
 
 </body>
 </html>
+
 
