--- a/index.html
+++ b/index.html
@@ -100,12 +100,50 @@
       image-rendering: pixelated;
       background: url('https://i.gifer.com/origin/08/0834037c00f0a7eea4215dbc9293dc6f_w200.gif') no-repeat center/contain;
       pointer-events: none;
-    }
+    } 
+
+.top-banner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #111;
+  color: #fff;
+  overflow: hidden;
+  height: 40px;
+  z-index: 9999;
+}
+
+.banner-content {
+  white-space: nowrap;
+  display: inline-block;
+  padding-left: 100%;
+  line-height: 40px;
+  font-size: 16px;
+  animation: scroll-left 15s linear infinite;
+}
+
+@keyframes scroll-left {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+body {
+  padding-top: 40px;
+}
+
+    
   </style>
 </head>
 
 <body>
-
+<div class="top-banner">
+  <div class="banner-content" id="bannerText"></div>
+</div>
   <h1>Fråga Fredrik</h1>
 
   <textarea id="userInput" placeholder="Skriv här..."></textarea><br>
@@ -218,34 +256,36 @@
     // Kör direkt vid laddning
     document.addEventListener('DOMContentLoaded', loadGuestbook);
   </script>
+<script>
+  const messages = [
+    "Du är en färsk fläkt, glöm inte det!",
+    "Exklusiva erbjudanden hela veckan, typ",
+    "Snabb leverans i hela Sverige",
+    "Missa inte våra populäraste produkter"
+  ];
 
+  function getDailyMessage() {
+    const today = new Date().toISOString().slice(0, 10); // YYYY-MM-DD
+    let hash = 0;
+
+    for (let i = 0; i < today.length; i++) {
+      hash = today.charCodeAt(i) + ((hash << 5) - hash);
+    }
+
+    const index = Math.abs(hash) % messages.length;
+    return messages[index];
+  }
+
+  document.getElementById("bannerText").textContent = getDailyMessage();
+</script>
 
   <div id="page-counter">
   <span id="counter">–</span>
 </div>
 
-<script>
-fetch('https://api.countapi.xyz/hit/reknaladd/visits')
-  .then(res => res.json())
-  .then(data => {
-    document.getElementById('counter').textContent = data.value
-  })
-</script>
 
-<style>
-#page-counter {
-  position: fixed;
-  top: 8px;
-  right: 10px;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
-  font-size: 12px;
-  color: yellow;
-  opacity: 0.8;
-  z-index: 9999;
-}
-</style>
-</body>
 </html>
+
 
 
 
