Fix HTML structure and restore content

--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8" />
-  <title>Fråga Fredrik fita</title>
+  <title>Fråga Fredrik</title>
 
   <style>
-    /* Dölj systemcursor över hela sidan */
     html, body, a, button, input, textarea, select {
       cursor: none !important;
     }
 
-    /* Custom cursor */
     .custom-cursor {
       position: fixed;
       top: 0;
@@ -242,3 +240,4 @@
 
 </body>
 </html>
+
