Fix HTML structure and update page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8" />
-  <title>Fråga Fredrik fita</title>
+  <title>Fråga Fredrik</title>
 
   <style>
     html, body, a, button, input, textarea, select {
@@ -229,3 +229,4 @@ document.addEventListener('DOMContentLoaded', loadGuestbook);
 
 </body>
 </html>
+
